Fix z-index on 404

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -235,6 +235,7 @@
 }
 
 .error-message {
+    position: relative;
     color: white;
     margin-top: 80px;
     text-shadow: 0 0 10px $grey-color-dark;
@@ -271,7 +272,7 @@
 
 .error-footer {
     position: fixed;
-    z-index: 10;
+    z-index: 9;
     font-size: 10px;
     color: white;
     bottom: 0;
